# gestion-labo-backend

./: deploy.sh  docker-compose-rabbit.yml  sonar-project.properties
gestion-exam-resultat/: Cargo.toml  Dockerfile  deploy-image.py  gestion_exam_deployment.yaml  gestion_exam_service.yaml  requirements.txt  rest.http  setup_test_rabbit.sh
gestion-exam-resultat/migrations/: 20241017174042_create_exam.sql  20241017183400_create_exam.sql  20241022213358_create_exam.down.sql  20241022213358_create_exam.up.sql  20241228122913_create_result.down.sql  20241228122913_create_result.up.sql
gestion-exam-resultat/src/: lib.rs  main.rs
gestion-exam-resultat/src/controllers/: exam_controller.rs
gestion-exam-resultat/src/dao/: dao.rs  dao_interface.rs  exam_dao.rs  interface.rs  mod.rs
gestion-exam-resultat/src/dto/: exam_dto.rs  mod.rs
gestion-exam-resultat/src/exam/: api_error.rs
gestion-exam-resultat/src/exam/controller/: mod.rs
gestion-exam-resultat/src/exam/dao/: mod.rs  resultat_dao.rs
gestion-exam-resultat/src/exam/dto/: mod.rs
gestion-exam-resultat/src/exam/model/: mod.rs  resultat.rs
gestion-exam-resultat/src/exam/service/: mod.rs
gestion-exam-resultat/src/message_queue/: mod.rs
gestion-exam-resultat/src/models/: exam.rs  mod.rs
gestion-exam-resultat/src/resultat/: mod.rs
gestion-exam-resultat/src/resultat/controller/: mod.rs
gestion-exam-resultat/src/resultat/dao/: mod.rs
gestion-exam-resultat/src/resultat/dto/: mod.rs
gestion-exam-resultat/src/resultat/model/: mod.rs
gestion-exam-resultat/src/services/: exam_service.rs  mod.rs
(+392 files in other folders)
