[package]
name = "gestion-exam-resultat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
tokio = { version = "1.40.0", features = ["full"] }
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono" ] }
dotenvy = "0.15.7"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.31"
serde = "1.0.210"
serde_json = "1.0.129"
axum-macros = "0.4.2"
tower-http = { version = "0.6.1", features = ["cors"] }
testcontainers = "0.23.1"
tracing = "0.1.40"
async-trait = "0.1.83"
tracing-subscriber = "0.3.19"
tower = "0.5.2"
http-body-util = "0.1.2"
rabbitmq-stream-client = "*"

[dev-dependencies]
mockall = "0.13.0"
